--- a/contract/.env.example
+++ b/contract/.env.example
@@ -1,8 +1,11 @@
 
 # Example .env for real deployment (replace with your values)
 PRIVATE_KEY=your_wallet_private_key_here
-ETHEREUM_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your_api_key
-
 # OpenAI API Key (already set)
 OPENAI_API_KEY=""
 
+ETHEREUM_SEPOLIA_RPC_URL=https://ethereum-sepolia-rpc.publicnode.com
+BASE_SEPOLIA_RPC_URL=https://sepolia.base.org
+POLYGON_AMOY_RPC_URL=https://polygon-amoy.drpc.org
+ARBITRUM_SEPOLIA_RPC_URL=https://endpoints.omniatech.io/v1/arbitrum/sepolia/public
+AVALANCHE_FUJI_RPC_URL=https://avalanche-fuji-c-chain-rpc.publicnode.com
