--- a/eliza/packages/plugin-chainlink-ccip/package.json
+++ b/eliza/packages/plugin-chainlink-ccip/package.json
@@ -24,27 +24,28 @@
   "license": "MIT",
   "dependencies": {
     "@ai16z/eliza": "workspace:*",
+    "@chainlink/ccip-js": "^0.2.4",
     "@chainlink/contracts-ccip": "^1.6.0",
     "@chainlink/functions-toolkit": "^0.3.2",
-    "ethers": "^6.8.0",
-    "viem": "^1.19.0",
-    "ws": "^8.14.2",
     "axios": "^1.6.0",
-    "zod": "^3.22.4",
-    "winston": "^3.11.0",
+    "ethers": "^6.8.0",
     "node-cron": "^3.0.3",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "viem": "^1.19.0",
+    "winston": "^3.11.0",
+    "ws": "^8.14.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/ws": "^8.5.8",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.2.2",
-    "jest": "^29.7.0",
     "@types/jest": "^29.5.6",
-    "eslint": "^8.51.0",
+    "@types/node": "^20.8.0",
+    "@types/node-cron": "^3.0.11",
+    "@types/ws": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4"
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
+    "jest": "^29.7.0",
+    "typescript": "^5.2.2"
   },
   "peerDependencies": {
     "@ai16z/eliza": "workspace:*"
@@ -58,4 +59,4 @@
       "import": "./dist/index.js"
     }
   }
-} 
+}
