--- a/eliza/packages/plugin-polymarket/package.json
+++ b/eliza/packages/plugin-polymarket/package.json
@@ -1,56 +1,62 @@
 {
-  "name": "@ai16z/plugin-polymarket",
+  "name": "@elizaos/plugin-polymarket",
+  "description": "ElizaOS plugin for Polymarket prediction markets",
   "version": "0.1.0",
-  "description": "Polymarket prediction markets integration for Eliza agents",
-  "main": "dist/index.js",
   "type": "module",
-  "scripts": {
-    "build": "tsc",
-    "dev": "tsc --watch",
-    "test": "jest",
-    "lint": "eslint src --ext .ts",
-    "clean": "rm -rf dist"
-  },
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "keywords": [
-    "eliza",
     "polymarket",
     "prediction-markets",
-    "betting",
-    "defi",
-    "polygon"
+    "elizaos",
+    "plugin"
   ],
-  "author": "AI16Z",
-  "license": "MIT",
-  "dependencies": {
-    "@ai16z/eliza": "workspace:*",
-    "axios": "^1.6.0",
-    "ws": "^8.14.2",
-    "zod": "^3.22.4",
-    "winston": "^3.11.0",
-    "node-cron": "^3.0.3",
-    "ethers": "^6.8.0"
+  "repository": {
+    "type": "git",
+    "url": ""
   },
-  "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/ws": "^8.5.8",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.2.2",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.6",
-    "eslint": "^8.51.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4"
-  },
-  "peerDependencies": {
-    "@ai16z/eliza": "workspace:*"
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      }
+    }
   },
   "files": [
     "dist"
   ],
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    }
-  }
-} 
+  "dependencies": {
+    "@ai16z/eliza": "workspace:*",
+    "@polymarket/clob-client": "^4.16.0",
+    "ethers": "^6.13.1",
+    "node-fetch": "^3.0.0",
+    "ws": "^8.17.0",
+    "zod": "3.24.2"
+  },
+  "devDependencies": {
+    "tsup": "8.4.0",
+    "prettier": "3.5.3",
+    "vitest": "2.1.5",
+    "@vitest/coverage-v8": "2.1.5"
+  },
+  "scripts": {
+    "start": "elizaos start",
+    "dev": "elizaos dev",
+    "build": "tsup",
+    "lint": "prettier --write ./src",
+    "test:component": "vitest run",
+    "test:e2e": "elizaos test",
+    "test": "npm run test:component && npm run test:e2e",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest",
+    "format": "prettier --write ./src",
+    "format:check": "prettier --check ./src"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "gitHead": "b165ad83e5f7a21bc1edbd83374ca087e3cd6b33"
+}
