deployed the proxy contract to fix the long contract size >24 kb

--- a/contract/package.json
+++ b/contract/package.json
@@ -7,7 +7,7 @@
     "compile": "hardhat compile",
     "test": "hardhat test",
     "test:ccip": "hardhat test test/ccip/*.test.ts",
-    "test:functions": "hardhat test test/functions/*.test.ts",
+    "test:functions": "npm run test:functions:sepolia && npm run test:functions:fuji",
     "test:automation": "hardhat test test/automation/*.test.ts",
     "test:vrf": "hardhat test test/vrf/*.test.ts",
     "test:streams": "hardhat test test/streams/*.test.ts",
@@ -35,7 +35,23 @@
     "verify:base-sepolia": "hardhat verify --network baseSepolia",
     "verify:polygon-amoy": "hardhat verify --network polygonAmoy",
     "verify:arbitrum-sepolia": "hardhat verify --network arbitrumSepolia",
-    "verify:avalanche-fuji": "hardhat verify --network avalancheFuji"
+    "verify:avalanche-fuji": "hardhat verify --network avalancheFuji",
+    "deploy": "hardhat run scripts/deploy.js",
+    "upload:functions": "npm run upload:functions:sepolia && npm run upload:functions:fuji",
+    "upload:functions:sepolia": "hardhat run scripts/deployFunctions.js --network sepolia",
+    "upload:functions:fuji": "hardhat run scripts/deployFunctions.js --network avalancheFuji",
+    "upload:functions:upgradeable:sepolia": "hardhat run scripts/deployFunctions-upgradeable.js --network sepolia",
+    "upload:functions:upgradeable:fuji": "hardhat run scripts/deployFunctions-upgradeable.js --network avalancheFuji",
+    "upload:functions:minimal:fuji": "hardhat run scripts/deployFunctions-minimal.js --network avalancheFuji",
+    "upload:functions:production:fuji": "hardhat run scripts/deployFunctions-production.js --network avalancheFuji",
+    "test:functions:sepolia": "hardhat run scripts/testFunctions.js --network sepolia",
+    "test:functions:fuji": "hardhat run scripts/testFunctions.js --network avalancheFuji",
+    "test:functions:production:fuji": "hardhat run scripts/testFunctions-production.js --network avalancheFuji",
+    "deploy:upgradeable:sepolia": "hardhat run scripts/deploy-upgradeable-arbitrage.ts --network sepolia",
+    "deploy:upgradeable:base-sepolia": "hardhat run scripts/deploy-upgradeable-arbitrage.ts --network baseSepolia",
+    "deploy:upgradeable:polygon-amoy": "hardhat run scripts/deploy-upgradeable-arbitrage.ts --network polygonAmoy",
+    "deploy:upgradeable:arbitrum-sepolia": "hardhat run scripts/deploy-upgradeable-arbitrage.ts --network arbitrumSepolia",
+    "deploy:upgradeable:avalanche-fuji": "hardhat run scripts/deploy-upgradeable-arbitrage.ts --network avalancheFuji"
   },
   "keywords": [
     "chainlink",
@@ -50,7 +66,10 @@
   "dependencies": {
     "@chainlink/contracts": "^1.4.0",
     "@chainlink/contracts-ccip": "^1.6.0",
+    "@chainlink/functions-toolkit": "^0.3.2",
     "@openzeppelin/contracts": "4.9.6",
+    "@openzeppelin/contracts-upgradeable": "^4.9.6",
+    "@openzeppelin/hardhat-upgrades": "^3.9.0",
     "axios": "^1.7.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
@@ -59,6 +78,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.7",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.13",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.11",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.10",
