--- a/eliza/nixpacks.toml
+++ b/eliza/nixpacks.toml
@@ -1,18 +1,9 @@
-# Nixpacks configuration for Eliza Agent Backend
-# This deploys the main Eliza agent service
-
-[variables]
-NODE_VERSION = "22.11.0"
-PNPM_VERSION = "9.12.3"
-
-[phases.setup]
-nixPkgs = ["nodejs_22", "pnpm"]
+# Minimal Nixpacks configuration - fixes Docker Hub issues
+# This uses Railway's default Node.js environment
 
 [phases.install]
 cmds = [
-    "corepack enable",
-    "corepack prepare pnpm@$PNPM_VERSION --activate",
-    "pnpm config set store-dir ~/.pnpm-store",
+    "npm install -g pnpm@latest",
     "pnpm install --frozen-lockfile"
 ]
 
@@ -24,15 +15,6 @@ cmds = [
 [start]
 cmd = "pnpm start"
 
-[healthcheck]
-path = "/health"
-interval = "30s"
-timeout = "10s"
-retries = 3
-
 [variables.environment]
 NODE_ENV = "production"
-PNPM_HOME = "/pnpm"
-PATH = "$PNPM_HOME:$PATH"
 PORT = "3000"
-HEALTH_PORT = "3001"
