--- a/eliza/nixpacks.toml
+++ b/eliza/nixpacks.toml
@@ -1,9 +1,20 @@
-# Minimal Nixpacks configuration - fixes Docker Hub issues
-# This uses Railway's default Node.js environment
+# Nixpacks configuration for Eliza Agent Backend
+# This deploys the main Eliza agent service
+
+[variables]
+NODE_VERSION = "22.11.0"
+PNPM_VERSION = "9.12.3"
+NODE_ENV = "production"
+PORT = "3000"
+
+[phases.setup]
+nixPkgs = ["nodejs_22", "pnpm"]
 
 [phases.install]
 cmds = [
-    "npm install -g pnpm@latest",
+    "corepack enable",
+    "corepack prepare pnpm@$PNPM_VERSION --activate",
+    "pnpm config set store-dir ~/.pnpm-store",
     "pnpm install --frozen-lockfile"
 ]
 
@@ -13,8 +24,10 @@ cmds = [
 ]
 
 [start]
-cmd = "pnpm start --non-interactive"
+cmd = "pnpm start"
 
-[variables.environment]
-NODE_ENV = "production"
-PORT = "3000"
+[healthcheck]
+path = "/health"
+interval = "30s"
+timeout = "10s"
+retries = 3
