--- a/eliza/nixpacks.toml
+++ b/eliza/nixpacks.toml
@@ -15,7 +15,7 @@ cmds = [
     "corepack enable",
     "corepack prepare pnpm@$PNPM_VERSION --activate",
     "pnpm config set store-dir ~/.pnpm-store",
-    "pnpm install --frozen-lockfile"
+    "pnpm install --no-frozen-lockfile"
 ]
 
 [phases.build]
