--- a/eliza/nixpacks.toml
+++ b/eliza/nixpacks.toml
@@ -8,7 +8,7 @@ NODE_ENV = "production"
 PORT = "3000"
 
 [phases.setup]
-nixPkgs = ["nodejs_22", "pnpm"]
+nixPkgs = ["nodejs_22", "pnpm", "python3", "gcc", "gnumake", "pkg-config"]
 
 [phases.install]
 cmds = [
